# memory_wm

./: .gitignore  pyproject.toml
scripts/: .gitignore  datagen.py  env_2d.py  env_2d_dataset.py  gen_probe_data.py  probe_network.py  robot_utils.py  test_probe.py  tmp  train.py  train_probe.py  world.json
src/memory_wm/: module.py
