[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory_wm"
version = "0.0.1"
authors = [
  { name="mass2010chromium", email="mass2010chromium@github.com" },
]
description = "Experiments with tiny world models"
readme = "README.md"
requires-python = "==3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
# Add urls here!
